# wasi-http-guest-repo

./: Cargo.toml  README.md
guest/: Cargo.toml
guest/src/: lib.rs
guest/wit/: guest.wit
src/: main.rs
tests/: guest.rs
